--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,18 +1,18 @@
 +++
-title = "Goldydocs"
-linkTitle = "Goldydocs"
+title = "photocastle"
+linkTitle = "photocastle"
 
 +++
 
-{{< blocks/cover title="Welcome to Goldydocs: A Docsy Example Project!" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="Welcome to photocastle" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
-	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/google/docsy-example">
+	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/photocastle">
 		Download <i class="fab fa-github ml-2 "></i>
 	</a>
-	<p class="lead mt-5">Porridge temperature assessment - in the cloud!</p>
+	<p class="lead mt-5">Self hosted photo management for your home</p>
 	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
